[project]
name = "pkg"
version = "0.1.0"
description = "Short description"
authors = [{ name = "Dongwan Kim", email = "kdw6485@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "requests",
    "numpy"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pkg"]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "ty>=0.0.1a7",
]


#pytest
#pytest-asyncio
